--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -26,12 +26,15 @@
 
         <TextView
             android:id="@+id/tv_movieName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Movie Name"
+            android:maxLines="4"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:textColor="@color/black"
-            android:layout_marginStart="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_movie"
             app:layout_constraintTop_toTopOf="parent" />
 
