--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.andricohalim.movieapps.ui.home.HomeFragment"
+        android:name="com.andricohalim.movieapps.home.HomeFragment"
         android:label="@string/title_popular"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.andricohalim.movieapps.ui.search.SearchFragment"
+        android:name="com.andricohalim.movieapps.search.SearchFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.andricohalim.movieapps.ui.favorite.FavoriteFragment"
+        android:name="com.andricohalim.movieapps.favorite.FavoriteFragment"
         android:label="@string/title_favorite"
         tools:layout="@layout/fragment_favorite" />
 </navigation>
