--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -50,6 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Release Date :"
+        android:textSize="15sp"
+        android:textStyle="bold"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:textColor="@color/black"
@@ -58,13 +60,15 @@
 
     <TextView
         android:id="@+id/tv_movieRelease"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
         android:text="Date"
-        android:layout_marginStart="8dp"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/tv_release"
-        app:layout_constraintTop_toTopOf="@+id/tv_release" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
+        app:layout_constraintStart_toEndOf="@+id/iv_movie"
+        app:layout_constraintTop_toBottomOf="@+id/tv_release" />
 
     <TextView
         android:id="@+id/textView"
@@ -96,7 +100,7 @@
     <ImageButton
         android:id="@+id/btn_favorite"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_bookmark_add_24"
