--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -30,7 +30,9 @@
             android:layout_height="wrap_content"
             android:text="Movie Name"
             android:maxLines="4"
-            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
