--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -17,7 +17,7 @@
             android:id="@+id/iv_movie"
             android:layout_width="100dp"
             android:layout_height="150dp"
-            android:contentDescription="Movie Image"
+            android:contentDescription="@string/movie_image"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:id="@+id/tv_movieName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Movie Name"
+            android:text="@string/movie_name"
             android:maxLines="4"
             android:textStyle="bold"
             android:textSize="18sp"
