--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,12 @@
         android:title="@string/title_popular" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/title_search" />
-
-    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_bookmark_added_24"
         android:title="@string/title_favorite" />
 
+    <item
+        android:id="@+id/navigation_setting"
+        android:icon="@drawable/settings"
+        android:title="@string/title_about" />
 </menu>
