--- a/core/src/main/res/layout/movie_item.xml
+++ b/core/src/main/res/layout/movie_item.xml
@@ -32,13 +32,22 @@
             android:maxLines="4"
             android:textStyle="bold"
             android:textSize="18sp"
+            android:layout_marginTop="32dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_movie"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvPopularity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/popularity"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toEndOf="@+id/iv_movie"
+            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
