add lottie shimmer

--- a/core/src/main/res/layout/item_list_placeholder.xml
+++ b/core/src/main/res/layout/item_list_placeholder.xml
@@ -8,7 +8,7 @@
     android:layout_marginEnd="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -19,6 +19,7 @@
             android:layout_height="150dp"
             android:contentDescription="@string/movie_image"
             android:scaleType="centerCrop"
+            android:background="#DDDDDD"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,9 +31,10 @@
             android:layout_height="wrap_content"
             android:text="@string/movie_name"
             android:maxLines="4"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textStyle="bold"
             android:textSize="18sp"
+            android:background="#DDDDDD"
+            android:textColor="#00FFFFFF"
             android:layout_marginTop="32dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -45,6 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/popularity"
+            android:background="#DDDDDD"
+            android:textColor="#00FFFFFF"
             android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
             app:layout_constraintStart_toEndOf="@+id/iv_movie"
